add swagger doc for all apis
